# chatgpt2agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
openai_mcp/: auth.py  backend.py  sentinel.py  server.py  setup.py  sse.py
openai_mcp/_vendored/: __init__.py  pow.py  turnstile.py
openai_mcp/tools/: __init__.py  _redact.py  account.py  apps.py  codex.py  conversations.py  gpts.py  instructions.py  memory.py  writes.py
tests/: test_backend_tools.py  test_deep_research.py  test_sse.py  test_sse_parser.py  test_writes.py
