[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openai-mcp"
version = "0.0.1"
description = "Use your ChatGPT Plus/Pro in Claude Code and other AI agents — one command setup"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "chatgpt", "claude", "openai", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.26.0",
    "uvicorn>=0.30.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
openai-mcp = "openai_mcp.server:main"

[project.urls]
Homepage = "https://github.com/robotlearning123/chatgpt2agent"
Repository = "https://github.com/robotlearning123/chatgpt2agent"
Changelog = "https://github.com/robotlearning123/chatgpt2agent/blob/main/CHANGELOG.md"
Issues = "https://github.com/robotlearning123/chatgpt2agent/issues"
